Date	Added
11/21
	* Re-Fixed Trade/Vending exploit [Lupus]
	* Fixed @whozeny. [Valaris]
	* Added rest of mapflags to const.txt. [Valaris]
	* Closed AFM files after reading, this fixed the improper char-server session #. [Valaris]
        * Skill updates: [Celest]
          - Updated Basilica, Sharp Shooting, Berserk, Meditatio (Thanks to DracoRPG!)
          - Fixed a typo with Blade Stop that was causing crashes, sorry. ^^;
          - Reverted changes to Cloaking, ours is already more updated! ^_^
          - Added temporary code for guild skills to stop crashing
	* @alive, @raisemap, @raise now display the resurrection skill animation [MC Cameri]
	* @charpetrename(AtCommand) is now #petrename(CharCommand) [MC Cameri]
	* @charjob/(AtCommand) is now #jobchange(CharCommand) [MC Cameri]
	* Removed japanese interserver packets, should fix various problems (jumpto, where, charposreq). [Valaris]
	* Added Yor's trade exploit bug fix. Added 2 skills bugs in the bugs.txt [Lupus]
	* Added charcommand.c/.h for the following reasons: [MC Cameri]
	  - Less congestion in atcommand.c
	  - Port commands that start with @char to #, example:
		~ @charoption will now be #option

11/20
	* Added str_lower() function to atcommand.c (from OA). [MC Cameri]
	* Simplified @charchangesex to @charchangesex [player], your sex is changed to the opposite one [MC Cameri]
	* Added @refresh, which is like a @jumpto <<yourself>>. [MC Cameri]
	* Added @petid <pet name> to find pet names, useful when you dont know which pets have eggs. [MC Cameri]
	* Added an effect_list in docs/ for descriptions, free to add onto that later. [spira]
          - Attempt to find new skill effects.
	* Added "nogo" mapflag to prevent the use of @go on a specified map. [Valaris]
	* Fixed small/big monster spawning crashing (mixed up the merge). [Valaris]
	* Fixed crash with upgrading TXT and having more than 256 accounts. [Valaris]
	* TXT upgrades will convert broken flag to attribute column. [Valaris]